--- a/UI/Web/src/styles.scss
+++ b/UI/Web/src/styles.scss
@@ -104,8 +104,10 @@ body {
   scrollbar-gutter: stable both-edges;
   font-family: 'Poppins', sans-serif;
   overflow: hidden; // When this is enabled, it will break the webtoon reader. The nav.service will automatically remove/apply on toggling them
+  scrollbar-color: rgba(255,255,255,0.3) rgba(0, 0, 0, 0.1);
+  scrollbar-width: thin;
 
-  @media (max-width: 576px) {
+  @media (max-width: $grid-breakpoints-lg) {
     margin-top: var(--nav-mobile-offset) !important;
     height: calc(var(--vh)* 100 - var(--nav-mobile-offset)) !important;
   }
